fix(): Changed Platform Thread to Virtual Thread